--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
-    "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
     "nanoid": "^5.0.8",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "redis-om": "^0.1.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
