--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,11 @@ services:
       - "3306:3306"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+  redis:
+    #image: redis/redis-stack-server
+    image: redis/redis-stack
+    container_name: acess-token-maricultura
+    restart: always
+    ports:
+      - "6379:6379"
+      - "8001:8001"
